# Game

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  start.sh
include/: Background.hpp  Bird.hpp  Game.hpp  IMovable.hpp  Pipe.hpp  View.hpp  config.hpp
src/: Background.cpp  Bird.cpp  Config.hpp  Game.cpp  Pipe.cpp  View.cpp
src/AssetManager/: AssetManager.cpp  AssetManager.hpp
src/Player/: Player.cpp  Player.hpp
